--- a/index.html
+++ b/index.html
@@ -1,18 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
-  <!--head : 사용자에게 보여지지 않지만 정보의 정의를 위한 공간 -->
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width", initial-scale="1.0">
-    <meta name="title" content="아이엠 그라운드">
-    <meta name="description" content="나의 첫 자기소개 페이지입니다.">
-    <meta name="author" content="Kookmin Univ">
-    <meta name="keywords" content="자기소개, 국민대, 경영대학원">
-    <!--width=device-width : 사용자 기기에 맞는 가로 길이 설정-->
-    <!--initial-scale= : 기본배율-->
-  </head>
-  <!--body : 사용자에게 보여질 정보를 정의하는 공간-->
-  <body>
-    <p>안녕하세요!</p>
-  </body>
+<!--head : 사용자에게 보여지지 않지만 정보의 정의를 위한 공간 -->
+
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width" , initial-scale="1.0">
+  <meta name="title" content="아이엠 그라운드">
+  <meta name="description" content="나의 첫 자기소개 페이지입니다.">
+  <meta name="author" content="Kookmin Univ">
+  <meta name="keywords" content="자기소개, 국민대, 경영대학원">
+  <meta property="og:title" content="아이엠그라운드">
+  <meta property="og:description" content="나의 첫 자기소개 페이지입니다.">
+  <meta property="og:image"
+    content="https://images.pexels.com/photos/4224305/pexels-photo-4224305.jpeg?auto=compress&cs=tinysrgb&w=600">
+  <link href="./style.css" rel="stylesheet" , type="text/css">
+  <style>
+    p {
+      font-size: 20px;
+    }
+  </style>
+  <script>
+      //alert('이 컴퓨는 해킹되었습니다.');
+
+  </script>
+  <script src="./script.js"></script>
+  <!--width=device-width : 사용자 기기에 맞는 가로 길이 설정-->
+  <!--initial-scale= : 기본배율-->
+</head>
+<!--body : 사용자에게 보여질 정보를 정의하는 공간-->
+
+<body>
+  <h1>자기소개 페이지</h1>
+  <h2>자기소개 페이지</h2>
+  <h3>● 자기소개</h3>
+  <h3>● 직업</h3>
+  <h3>● 취미/특기</h3>
+  <h1>자기소개 본문</h1>
+  <p>본문입니당</p>
+  <p>
+    첫번째 문장입니다.</br>
+    두번째 문장입니다.</br>
+    세번째 문장입니다.</br>
+
+  </p>
+</body>
+
 </html>
