--- a/index.html
+++ b/index.html
@@ -41,8 +41,44 @@
     첫번째 문장입니다.</br>
     두번째 문장입니다.</br>
     세번째 문장입니다.</br>
-
   </p>
+
+  <!--list item-->
+  <h2>저녁메뉴 후보군</h2>
+  <!--ol /reversed = 숫자 및 순서 거꾸로-->
+  <!-- <ol type="I" start="13"> = 순서매김 번호 타입 설정, 시작 숫자-->
+  <!-- 순서가 매겨져 있는 태그는 <P>로 쓰지 말고 <OL>로 써라-->
+  <ol type="I" start="13">
+   <li>삼겹살</li>
+   <li>살치살</li>
+   <li>갈빗살</li>
+  </ol>
+
+  <h2>좋아하는 동물</h2>
+  <ul>
+   <li>강아지</li>
+   <li>고양이</li>
+   <li>햄스터</li>
+  </ul>
+
+  <a href="https://festa.io/events/4910">>기본링크</a></br>
+  <a href="https://festa.io/events/4910" target="_blank">>새탭 열기</a></br>
+  <a href="https://festa.io/events/4910" target="_self">>현재창 열기</a></br></br>
+
+  <!--이미지 src에서 ./으로 정확한 경로를 불러올 수 있음 alt는 대체 텍스트임-->
+  <!--닫는거 없는 한줄로 코드 짤때는 끝에 /를 넣어줘라-->
+  <img src="./rabbit.jpeg" alt="토끼입니다." width="200"/>
+
+<picture>
+<source srcset="./taxi.jpeg" media="(max-width: 480px)"/>
+<source srcset="/tea.jpeg" media="(min-width: 480px)"/>
+  <img src="taxi.jpeg" width="300">
+  
+</picture>
+  
+  <video width="340" height="360" controls="controls">
+    <source src="/human.mp4" type="video/mp4"/>
+</video>
 </body>
 
 </html>
