--- a/index.html
+++ b/index.html
@@ -12,11 +12,13 @@
         background-color: #904200;
       }
     </style>
+    
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Black+Han+Sans&display=swap" rel="stylesheet">
-  </head>
+    <link href="https://fonts.googleapis.com/css2?family=Bagel+Fat+One&family=Black+Han+Sans&family=Noto+Sans+KR:wght@100..900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Bagel+Fat+One&family=Black+Han+Sans&family=Nanum+Pen+Script&family=Noto+Sans+KR:wght@100..900&family=Sunflower:wght@300;500;700&display=swap" rel="stylesheet">
     
+  </head>
   <body style="background-color: #009042;">
     <header>
       <div id ="main-logo">
@@ -49,10 +51,13 @@
       </article>
 
       <article id=article2>
-        <h3>국민대학교 교정에서 푸른 벚꽃 발견되어 충격</h3>
-        <p>2024년 4월 국민대학교 경영관 앞에 푸른 벚꽃 나무가 발견되어 사람들의 이목을 집중시키고 있다.</p>
-        <p>2024년 4월 국민대학교 경영관 앞에 푸른 벚꽃 나무가 발견되어 사람들의 이목을 집중시키고 있다.</p>
-        <p>2024년 4월 국민대학교 경영관 앞에 푸른 벚꽃 나무가 발견되어 사람들의 이목을 집중시키고 있다.</p>
+        <h1>국민대학교 교정에서 푸른 벚꽃 발견되어 충격</h1>
+        <p class="p-thin p-larger">2024년 4월 국민대학교 경영관 앞에 푸른 벚꽃 나무가 발견되어 사람들의 이목을 집중시키고 있다.</p>
+        <p class="p-normal p-align">2024년 4월 국민대학교 경영관 앞에 푸른 벚꽃 나무가 발견되어 사람들의 이목을 집중시키고 있다.</p>
+        <p class="p-bold p-smaller">2024년 4월 국민대학교 경영관 앞에 푸른 벚꽃 나무가 발견되어 사람들의 이목을 집중시키고 있다.</p>
+        <p class="=p-linebr p-justify long-text">
+          지방자치단체는 주민의 복리에 관한 사무를 처리하고 재산을 관리하며, 법령의 범위안에서 자치에 관한 규정을 제정할 수 있다. 국회는 법-률에 저촉되지 아니하는 범위안에서 의사와 내부규율에 관한 규칙을 제정할 수 있다. 공무원의 직무상 불법행위로 손해를 받은 국민은 법률이 정하는 바에 의하여 국가 또는 공공단체에 정당한 배상을 청구할 수 있다. 이 경우 공무원 자신의 책임은 면제되지 아니한다. 대통령후보자가 1인일 때에는 그 득표수가 선거권자 총수의 3분의 1 이상이 아니면 대통령으로 당선될 수 없다. 헌법재판소의 장은 국회의 동의를 얻어 재판관중에서 대통령이 임명한다. 형사피의자 또는 형사피고인으로서 구금되었던 자가 법률이 정하는 불기소처분을 받거나 무죄판결을 받은 때에는 법률이 정하는 바에 의하여 국가에 정당한 보상을 청구할 수 있다.
+        </p>
         </article>
       </section>
       <section>
@@ -62,7 +67,7 @@
             오늘 저녁에 뭐 드실?
           </summary>
           <p>
-            치즈 크러스트 추가한 피자가 떙긴다.
+            치즈 크러스트 추가한 피자가 땡긴다.
           </p>
         </details>
 
